add Our donate plan section

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,135 @@
     padding: 0;
     font-family: 'Inter', sans-serif;
 }
+.primary-btn{
+    background: #FF5959;
+    width: 150px;
+    padding: 10px 0px; 
+    font-size: 16px;
+    font-weight: 400;
+    color: #FFF;
+    border: none;
+    border-radius: 6px;
+}
+.primary-color{
+    color: #FF5959;
+}
+/* header */
+header{
+    background-image: url("../images/donation1.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+}
+header nav{
+    display: flex;
+    padding: 4% 10%;
+    justify-content: space-between;
+}
+header nav .logo-text{
+    font-size: 45px;
+    color: white;
+    font-weight: 800;
+}
+header nav ul{
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+header nav ul li{
+    list-style: none;
+    align-items: center;
+}
+header nav ul li a{
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 500;
+}
+header nav ul li a:hover{
+    color: #FF5959;
+}
+/* header-content */
+.header-content{
+    color: white;
+    padding: 11% 15%;
+    text-align: center;
+}
+.donate-title{
+    font-size: 65px;
+    margin-bottom: 30px;
+}
+.donate-desc{
+    font-size: 20px;
+    color: #e1dede;
+    margin-bottom: 30px;
+}
+/* main-content */
+.main-content{
+    padding: 4% 10%;
+}
+
+/* Donate Today */
+.donate-today{
+    text-align: center;
+}
+.today-title{
+    font-size: 45px;
+    margin: 30px 0;
+
+}
+.today-desc{
+    font-size: 20px;
+    color: #757575;
+    margin-bottom: 40px;
+}
+.box-tk{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+.all-boxes{
+    background-color: #FAFAFA;
+    padding: 20px 40px;
+    border: 2px solid #757575;
+}
+.all-boxes:hover{
+    border: 2px solid #FF5959;
+    color: #FF5959;
+    cursor: pointer;
+}
+.other-tk{
+    color: #757575;
+    margin-bottom: 10px;
+}
+.hr-today{
+    width: 60%;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+/* Donate Plan */
+.donate-plan{
+    margin-top: 80px;
+}
+.donate-title-desc{
+    text-align: center;
+
+}
+.donate-title-desc-sub{
+    font-size: 20px;
+    color: #757575;
+}
+.donate-box{
+    display: flex;
+    gap: 20px;
+    margin-top: 40px;
+}
+.donate-box-3{
+    background-color: rgba(79, 157, 166, 0.1);
+    padding: 40px 20px;
+    border-radius: 10px;
+}
+.food-box-title{
+    margin: 20px 0;
+}
