--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@
 .primary-color{
     color: #FF5959;
 }
+.bottom-space{
+    margin-bottom: 30px;
+}
 /* header */
 header{
     background-image: url("../images/donation1.jpg");
@@ -134,4 +137,16 @@ header nav ul li a:hover{
 }
 .food-box-title{
     margin: 20px 0;
+}
+/* live-depend */
+.live-depend{
+    display: flex;
+    margin: 80px 0;
+    gap: 50px;
+}
+.depend-img{
+    width: 80%;
+}
+.depend-desc{
+    margin-top: 10px;
 }
